added short commetn figure 12

--- a/submission/AdaptiveND_PrimieroAllo_revised.tex
+++ b/submission/AdaptiveND_PrimieroAllo_revised.tex
@@ -861,7 +861,7 @@ The first marking rule $\XBox$M reflects the following condition: if a formula $
 
 The second marking rule $\XBox$M2 reflects the following condition: if a formula $\psi$ is derived always under an adaptive condition that is part of the same minimal choice-set in $\Phi(\Gamma)$, then at the next stage the formula $\psi$ can be retracted. Here the adaptive condition of the conclusion should be intended as saying that the retraction applies to all stages where the derivation of $\psi$ was obtained under one of the listed conditions.
 
-
+In Figure \ref{fig:exmarkMA} we illustrate two trees where markings for Minimal Abnormality are applied. In the first tree, it is shown how the derivation of a formula $\psi$ under an adaptive condition $\Theta$ is followed by a series of derivations $\Pi$ for all possible choice sets of minimally abnormal formulas; if the side condition that requires $\Theta$ to occur in each such set, then marking can be applied. In the second (dual) tree, it is shown how a formula $\psi$ derived under a series of adaptive conditions $\Theta, \dots, \Theta'$ is marked if all these conditions occur in at least one choice set of minimally abnormal formulas derived by a sub-tree $\Pi$.
 
 
 \begin{figure}[t]
@@ -914,7 +914,7 @@ The second marking rule $\XBox$M2 reflects the following condition: if a formula
 {\TurnPrimePrimePlusTwo{\Gamma;\Theta^-}{\psi}}
 \end{mathpar}
 
-\caption{Marking-trees for minimal abnormality}
+\caption{Marking-trees for Minimal Abnormality}\label{fig:exmarkMA}
 \end{figure}
 
 
