small change to replies, answered one point in review1

--- a/submission/AdaptiveND_PrimieroAllo_revised.tex
+++ b/submission/AdaptiveND_PrimieroAllo_revised.tex
@@ -1207,7 +1207,7 @@ As illustrated in a second example based on the proof from \S \ref{subsec:sel-ex
         (11) & $\bigvee(p \wedge \neg p, q \wedge \neg q)$ & $\wedge$ I, (9, 10) & $\emptyset$
     \end{tabular}
 \end{center}
-Indeed, whereas the above proof is a straightforward translation of the tree-form proof up to stage {\sf 11}, the marking of line 5 that should be added to the linear proof once $\bigvee(p \wedge \neg p, q \wedge \neg q)$ is derived cannot be added simply in virtue of mechanically translating the proof into a linear format. This is because in the standard proof-format marking is governed by a definition, which simply stipulates when a line is marked, whereas in \textsf{AdaptiveND} marking is governed by rules and therefore requires the execution of additional inferential steps.\footnote{See also footnote 10 of \cite{BDVM08} for a discussion of this distinction.} To show that proofs in \textsf{AdaptiveND} correctly capture the adaptive dynamics, we will therefore have to show that such ``missing markings'' can always be obtained by a further extension of a proof.
+Indeed, the above proof is a straightforward translation of the tree-form proof up to stage {\sf 11}, but the marking of line 5, which should be added to the linear proof once $\bigvee(p \wedge \neg p, q \wedge \neg q)$ is derived, cannot be simply in virtue of a mechanical translation procedure. This is because in the standard proof-format marking is governed by a definition, which simply stipulates when a line is marked, whereas in \textsf{AdaptiveND} marking is governed by rules and therefore requires the execution of additional inferential steps.\footnote{See also footnote 10 of \cite{BDVM08} for a discussion of this distinction.} To show that proofs in \textsf{AdaptiveND} correctly capture the adaptive dynamics, we will therefore have to show that such ``missing markings'' can always be obtained by a further extension of a proof.
 
 In the next section we complete our system with the required meta-theoretical analysis needed to define derivability at stage and final derivability.
 
